# rust-html2text

fuzz/: Cargo.toml
fuzz/fuzz_targets/: html2text-fuzz.rs
mayhem/: Dockerfile  Mayhemfile
